--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Game Memória</title>
+
+    <link rel="stylesheet" href="css/formatacoes.css">
 </head>
 <body>
     <div id="cardboard"></div>
