--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/formatacoes.css">
 </head>
-<body>
+<body onload="gameMEMORIA()">
     <div id="cardboard"></div>
     <script src="js/main.js"></script>
 </body>
